# z3-pyodide

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
examples/: index.html  server.py  setup.sh  z3-worker.js  z3_pyodide-0.1.0-py3-none-any.whl
tests/: conftest.py  test_arithmetic.py  test_arrays.py  test_basic.py  test_bitvec.py  test_datatypes.py  test_functions.py  test_optimize.py  test_sexpr_parser.py  test_smtlib2.py  test_solver.py
z3_pyodide/: __init__.py  _ast.py  _context.py  _datatypes.py  _exprs.py  _functions.py  _model.py  _model_parser.py  _sexpr_parser.py  _smtlib2.py  _solver.py  _sorts.py  _toplevel.py
z3_pyodide/_backend/: __init__.py  _base.py  _subprocess.py  _wasm.py
